applied  text-overflow ellipses BugId: 46823
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@60637 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/CategorySelect/oasis.scss
+++ b/extensions/wikia/CategorySelect/oasis.scss
@@ -4,6 +4,8 @@
 @import "../../../skins/oasis/css/core/color";
 @import "../../../skins/oasis/css/mixins/border-radius";
 @import "../../../skins/oasis/css/mixins/yui-suggest";
+@import "../../../skins/oasis/css/mixins/ellipses";
+
 
 // Fixme: including styles from EditPageLayout is pretty janky.
 // When we refactor common colors/mixins into skins/oasis these should be removed.
@@ -48,6 +50,11 @@
 			color: $color-text;
 			line-height: 22px;
 			margin: 0;
+			span {
+				@include ellipses;
+				display: inline-block;
+				width: 180px;
+			}
 			&:hover {
 				background-color: $color-epl-hover;
 			}
